--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: Prison
 author: Fycarman
-version: 1.0
+version: 1.1
 main: Prison\Main
-api: 3.0.0-ALPHA12
+api: 3.0.0
 depend: [PurePerms, MineReset, EconomyAPI]
 description: "Prison plugin"
 permissions:
